# scientific-image

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CITATION.cff  CNAME  DESIGN.md  README.md  build_hooks.py  mkdocs.yml  pyproject.toml  sitemap.xml
data/: .gitignore  AGENTS.md
data/.obsidian/: app.json  community-plugins.json  hotkeys.json
data/pages/: about.md
data/scripts/: random-articles.js
data/stylesheets/: wikipedia.css
data/templates/: archive.md  article.md  index.md  log.md  raw-source.md
data/wiki/: index.md  log.md
overrides/: main.html
pages/about/: index.html
raw/2026-07-10/: chas.md  chomu-matematyka-ne-ie-naukoiu.md  do-pochatku-vsesvitu-kosmolohiia-penrouza.md  elektromahnitna-polova-kartyna-svitu.md  evoliutsiia-zhyttia-chastyna-1-hadei-arkhei-proterozoi.md  evoliutsiia-zhyttia-chastyna-2-paleozoiska-era.md  evoliutsiia-zhyttia-chastyna-3-4-mezozoiska-era.md  evoliutsiia-zhyttia-chastyna-4-kainozoiska-era.md  fizyka-elementarnykh-chastynok.md  iak-vynykaie-masa-mekhanizm-khiggsa.md  informatsiia.md  istoriia-odnoho-fotona.md  istoryia-rozvytku-naukovoi-dumky-chastyna-1-antychnist.md  istoryia-rozvytku-naukovoi-dumky-chastyna-2-heotsentryzm-seredni-viky.md  kinets-svitu-ta-maibutnie-vsesvitu.md  kvadratne-kolo-ta-pi-4.md  kvantova-kartyna-svitu.md  lazery-pryntsyp-dii-ta-budova-chastyna-1.md  lazery-pryntsyp-dii-ta-budova-chastyna-2.md  magichni-chisla-vsesvitu.md  materiia-chastyna-1-temna-materiia-enerhiia-rechovyna-pole.md  pro-pidtrymku-kanalu.md  (+26 more)
src/: config.yaml  hooks.py
wiki/: index.html  index.md  log.md
(+197 files in other folders)
