[project]
name = "scientific-image"
version = "0.1.0"
description = "Scientific Image"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Andrii Bogdanovych", email = "a@bogdanovych.org" }
]
dependencies = [
    "mkdocs==1.6.1",  # mkdocs<2.0.0 !!!
    "mkdocs-material==9.7.7",
]
[dependency-groups]
dev = [
    "pre_commit",
    "ruff",
]
[project.urls]
"Homepage" = "https://www.bogdanovych.org"
"Website" = "https://scientific-image.bogdanovych.org"
"Repository" = "https://github.com/BogdanovychA/scientific-image"
"Bug Tracker" = "https://github.com/BogdanovychA/scientific-image/issues"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "preserve"
